cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_173.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/dsaparam.c:244: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/dsaparam.c:244:13: Write of unused value
242.               i = i2d_DSAPrivateKey_bio(out, dsakey);
243.           else
244.               i = PEM_write_bio_DSAPrivateKey(out, dsakey, NULL, NULL, 0, NULL,
                   ^
245.                                               NULL);
246.           DSA_free(dsakey);
